[package]
name = "http_load_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.53",features = ["derive"]}
hdrhistogram = "7.5.4"
humantime = "2.3.0"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
