[package]
name = "http_load_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.53",features = ["derive"]}
humantime = "2.3.0"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
